src/test/deca/context/invalid/provided/BadTypeCast.deca
// DESCRIPTION: cast d'un entier en un boolean
// RESULTAT: BadTypeCast.deca:4:13: Incompatible types for cast ! (3.39)
{
	boolean b = (boolean) (1);
}
